Fixing extra margin when header element contains an h1

--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -106,6 +106,7 @@ header {
 		line-height:1em;
 		float: left;
 		margin-top: 0.67em;
+		margin-bottom: 0;
 		a {
 			position: relative;
 			display: block;
